# psd_projection

./: CMakeLists.txt  README.md  test_gemm_tensor.cu
MATLAB/: CMakeLists.txt  example.m  psd_projection_MATLAB.cu
include/: check.h
include/psd_projection/: check.h  composite_FP16.h  composite_FP32.h  composite_FP32_Lt.h  composite_FP32_emulated.h  composite_TF16.h  eig_FP32_psd.h  eig_FP64_psd.h  express_FP32.h  express_FP32_Lt.h  express_TF16.h  haoyu_FP16.h  haoyu_FP32.h  haoyu_TF16.h  helpers.h  iterative_TF16.h  lanczos.h  lobpcg.h  lopbcg.h  utils.h
src/: composite_FP16.cu  composite_FP32.cu  composite_FP32_Lt.cu  composite_FP32_emulated.cu  composite_TF16.cu  eig_FP32_psd.cu  eig_FP64_psd.cu  express_FP32.cu  express_FP32_Lt.cu  express_TF16.cu  haoyu_FP32.cu  haoyu_TF16.cu  helpers.cpp  iterative_TF16.cu  lanczos.cu  lobpcg.cu  lopbcg.cu  sample_cublasLt_LtSgemm.cu  utils.cu
test/: benchmarks.hpp  composite_FP16_test.hpp  composite_FP32_Lt_test.hpp  composite_FP32_test.hpp  express_FP32_Lt_test.hpp  express_FP32_test.hpp  iterative_TF16_test.hpp  lanczos_test.hpp  lobpcg_test.hpp  lopbcg_test.hpp  test_utils.hpp  tests.cpp
